First stage to completing user authentication and authorization.
