# mule-shell-model/main-swagger/swagger.yaml
@@ -14,6 +14,44 @@ consumes:
 produces:
   - application/json
 paths:
+  /secure/login:
+    post:
+      operationId: login
+      summary: 'Login point.'
+      parameters:
+        - name: authorization
+          in: header
+          type: array
+          items:
+            $ref: JsonString
+      responses:
+        200:
+          summary: 'Successful login'
+          schema:
+            $ref: JsonWebToken
+        401:
+          summary: 'Unauthorized login attempt'
+          schema:
+            $ref: JsonWebToken
+
+  /secure/logout:
+    post:
+      summary: 'Logout point.'
+      operationId: logout
+      parameters:
+        - name: body
+          description: BasicUser
+          in: body
+          schema:
+            $ref: '#/definitions/BasicUser'
+          required: true
+      responses:
+        200:
+          summary: 'Successful logout'
+          type: string
+        401:
+          summary: 'Unauthorized logout attempt'
+
   /session:
     get:
       operationId: getSession
@@ -114,6 +152,20 @@ paths:
             $ref: '#/definitions/ExpressionResult'
 
 definitions:
+  JsonString:
+    type: string
+
+  JsonWebToken:
+    type: string
+
+  BasicUser:
+    type: object
+    properties:
+      sessionId:
+        type: string
+      username:
+        type: string
+
   Expression:
     type: object
     properties:
